# reglang-mod

./: .gitignore  README.md  _CoqProject  default.nix  dune-project
theories/: dfa.v  dune  enfa.v  events.v  hsignal.v  lang.v  nfa.v  re.v  signal.v  state.v  statev2.v
