(lang dune 3.6)
(using coq 0.6)
(license Apache-2.0)
(source (uri "https://gitlab.com/verify-at-iitpkd/aruvi"))
(bug_reports "https://gitlab.com/verify-at-iitpkd/aruvi/issues")
;;
;; Uncoment and set where ready.
;; (homepage <url>)
;; (documentation <url>)
;;
(generate_opam_files true)
(package
 (name aruvi)
 (allow_empty)
)
